--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
   </head>
   <body>
-    <video style="width: 100%; height: 100%" controls>
-      <source src='https://youtu.be/EjJrMXC-ZLg' type='video/mp4'>
-    </video>
+   <iframe width="420" height="315"
+	   src="https://www.youtube.com/embed/TLopJnBNz5I">
+   </iframe>
   </body>
 </html>
